<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:paddingTop="25dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:padding="4dp"
            android:src="@drawable/car" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/toolbar_text"
            android:textColor="@color/black"
            android:textSize="20sp" />
    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/septal_line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/main_toolbar"
        android:background="#C0C0C0" />

    <LinearLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/septal_line"
        android:orientation="vertical">

        <TextView
            android:id="@+id/septal_line3"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:background="#DDDDDD"
            android:gravity="bottom"
            android:paddingBottom="5dp"
            android:paddingEnd="@dimen/activity_horizontal_margin"
            android:paddingStart="@dimen/activity_horizontal_margin"
            android:text="@string/connected" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/noConnect_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/no_add_ble" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/connectedRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/enabled_device"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="#DDDDDD"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/enabledDevice" />

            <TextView
                android:id="@+id/tv_countdown_timer"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginStart="8dp"/>

            <android.support.v4.widget.ContentLoadingProgressBar
                android:id="@+id/circle_loading"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/activity_horizontal_margin" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/noSearch_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="暂未可用设备" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/searchingRL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </RelativeLayout>

    </LinearLayout>

    <android.support.v7.widget.CardView
        android:id="@+id/bottom_CardView"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:elevation="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_marginTop="2dp">

            <LinearLayout
                android:id="@+id/search_linear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/searchIMG"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:src="@drawable/search" />

                <TextView
                    android:id="@+id/search_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/search"
                    android:textSize="10sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/scan_linear"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/scanIMG"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_gravity="center_horizontal"
                    android:clickable="true"
                    android:src="@drawable/scan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/scan"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>
